[package]
name = "flume-sandbox"
version = "0.1.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.8"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
